TestSuite/PascalABCTests/errors/err0403.pas
begin
  if true then
  var res := (a is integer(var b));
end.